<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tx_timer"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="128dp"
        android:text="@string/tx_timer"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yourTime_"
        app:layout_constraintTop_toBottomOf="@+id/tx_goaltime"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/bt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="32dp"
        android:text="@string/bt_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_timer"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tx_goal_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="142dp"
        android:text="@string/tx_goal"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_goaltime"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/goal"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/tx_goal_"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="374dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="103dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toTopOf="@+id/bt_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_diff"
        app:srcCompat="@drawable/sd_c" />

    <TextView
        android:id="@+id/yourTime_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_time"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_goal_" />

    <TextView
        android:id="@+id/tx_diff"
        android:layout_width="181dp"
        android:layout_height="39dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        android:text="@string/differ"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tx_timer" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/diff"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourTime_" />

</android.support.constraint.ConstraintLayout>